--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lucas-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.ts",
   "type": "module",
   "scripts": {
     "start": "tsx src/server.ts",
